[gd_scene load_steps=6 format=2]

[ext_resource path="res://Things/Die/Dice_border.png" type="Texture" id=1]
[ext_resource path="res://Things/Die/Sword_icon.png" type="Texture" id=2]
[ext_resource path="res://Things/Die/Shield_icon.png" type="Texture" id=3]
[ext_resource path="res://Things/Die/Heat_icon.png" type="Texture" id=4]
[ext_resource path="res://Things/UIDie/UIDie.gd" type="Script" id=5]

[node name="UIDie" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="TextureRect" parent="."]
margin_left = 310.0
margin_top = 590.0
margin_right = 410.0
margin_bottom = 690.0
mouse_filter = 0
mouse_default_cursor_shape = 2
texture = ExtResource( 1 )

[node name="SwordIcon" type="TextureRect" parent="."]
margin_left = 330.0
margin_top = 610.0
margin_right = 390.0
margin_bottom = 670.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="HealthIcon" type="TextureRect" parent="."]
visible = false
margin_left = 330.0
margin_top = 610.0
margin_right = 390.0
margin_bottom = 670.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="ShieldIcon" type="TextureRect" parent="."]
visible = false
margin_left = 330.0
margin_top = 610.0
margin_right = 390.0
margin_bottom = 670.0
mouse_filter = 2
texture = ExtResource( 3 )

[connection signal="gui_input" from="Border" to="." method="_on_Border_gui_input"]
